# carpo

./: .env_example  .gitignore  DEV_INSTALL.md  Development.md  Launch-Script.md  README.md  VERSIONS.md  flag_watch.go  flag_watch_store.go  go.mod  go.sum  grade_store.go  grades.go  main.go  problem_store.go  problems.go  solution_store.go  submission_store.go  submissions.go  tag.go  tag_store.go  user_store.go  users.go  utils.go  viewStatus.go
CodingHub/: COMP4151.md  README.md
Example/: config.json  exercise_python.py  (+1 more)
carpo_student/: .gitignore  .prettierignore  INSTALL.md  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
carpo_student/.github/workflows/: build.yml  check-release.yml
carpo_student/binder/: environment.yml  postBuild
carpo_student/carpo_student/: __init__.py  handlers.py
carpo_student/jupyter-config/nb-config/: carpo_student.json
carpo_student/jupyter-config/server-config/: carpo_student.json
carpo_student/src/: get-solutions.ts  handler.ts  index.ts  model.ts  raise-hand-help.ts  share-code.ts  widget.tsx
carpo_student/style/: base.css
teacher_ext/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
teacher_ext/binder/: environment.yml  postBuild
teacher_ext/jupyter-config/nb-config/: teacher_ext.json
teacher_ext/jupyter-config/server-config/: teacher_ext.json
teacher_ext/src/: handler.ts  index.ts  model.ts  widget.tsx
teacher_ext/teacher_ext/: __init__.py  handlers.py
(+130 files in other folders)
